<resources>

    <string name="app_name">Recipedia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="Ingredient_text">Recipe Ingredients</string>
    <string name="input_ingredients">Input Ingredients</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipeTitle">Title</string>
    <string name="recipeIngredients">Recipe Ingredients</string>
    <string name="splashNightTitle">Splash Night</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search_bar_name">Search</string>

</resources>