...
            android:src="@drawable/ic_camera_alt"
            app:backgroundTint="@color/darkBlue"
            app:layout_anchor="@id/bottomAppBar"
            app:tint="@color/white" />

        <fragment
            android:id="@+id/nav_host_fragment_activity_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
            app:layout_constraintLeft_toLeftOf="parent"
...
